# kitty-background-manager

./: README.md  install.sh  pyproject.toml
beastwick18_kitty_background_manager/: config.py  defaults.py  main.py  output.py  tools.py
tests/: test_beastwick18_kitty_background_manager.py
